--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
             <artifactId>jnativehook</artifactId>
             <version>2.1.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.12</version>
+        </dependency>
     </dependencies>
 </project>
