--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,6 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
             <version>11</version>
-            <classifier>win</classifier>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.1stleg/jnativehook -->
@@ -66,7 +65,7 @@
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
-            <version>2.3.0-b170127.1453</version>
+            <version>2.3.1</version>
         </dependency>
     </dependencies>
 </project>
